# Arrears-Risk-Model

./: .gitignore  LICENSE  README.md  arm_analysis.ipynb  arm_approach.md  dismissed_future_work.md  pyproject.toml
.github/workflows/: ci.yml
config/: default.yaml
data/: README.md
docs/: approach.docx  architecture.dot  model_card.md
notebooks/: 01_eda_and_imd.ipynb  02_clustering.ipynb  03_modelling.ipynb
src/arrears_risk_model/: __init__.py  config.py  data.py  evaluate.py  features.py  logging_config.py  models.py  predict.py  schemas.py  train.py
tests/: conftest.py  test_config.py  test_data.py  test_evaluate.py  test_features.py  test_models.py  test_predict.py  test_schemas.py  test_train.py
