[project]
name = "arrears-risk-model"
version = "0.1.0"
description = "Productionised pipeline for predicting household arrears risk (Lewisham council data)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Nadine Spychala", email = "nadine.spychala@gmail.com" }]
dependencies = [
    "geopandas>=1.1.3",
    "jupyter>=1.1.1",
    "kmodes>=0.12.2",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pandera>=0.20",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "pyyaml>=6.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
    "xgboost>=3.2.0",
]

[project.scripts]
arrears-train = "arrears_risk_model.train:main"

[project.urls]
Repository = "https://github.com/nadinespy/Arrears-Risk-Model"
Issues = "https://github.com/nadinespy/Arrears-Risk-Model/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arrears_risk_model"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["notebooks", "data", "results", "models", "outputs", "*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "N", "RUF", "SIM"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
